--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
     "selenium-webdriver": "^4.9.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node dist/index.js",
+    "start-dev": "yarn ts-node src/index.ts",
+    "build": "npx tsc",
+    "postinstall": "yarn build"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@types/node": "^18.16.0",
+    "@types/selenium-webdriver": "^4.1.13",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
